--- a/test/html-fixtures/test_form_for_with_input_and_renamed_submit.html
+++ b/test/html-fixtures/test_form_for_with_input_and_renamed_submit.html
@@ -1,1 +1,1 @@
-<form action='#' method='post'><label for='name'>Name</label><input name='name' type='text' value='rob'><label for='job'>Job</label><textarea name='job' cols='20' rows='40'>hexlet</textarea><input type='submit' value='Wow'></form>
+<form action='#' method='post'><label for='name'>Name</label><input name='name' type='text' value='rob'><label for='job'>Job</label><textarea cols='20' rows='40' name='job'>hexlet</textarea><input type='submit' value='Wow'></form>
