--- a/test/html-fixtures/test_form_for_with_submit.html
+++ b/test/html-fixtures/test_form_for_with_submit.html
@@ -1,1 +1,1 @@
-<form action='/profile' method='get' class='hexlet-form'><input type='submit' value='Save'></input></form>
+<form method='get' class='hexlet-form' action='/profile'><input type='submit' value='Save'></input></form>
